Fix gallery wide alignment.

--- a/seedlet/assets/css/ie.css
+++ b/seedlet/assets/css/ie.css
@@ -2362,7 +2362,7 @@ object {
 }
 
 .wp-block-gallery {
-	margin: 0;
+	margin: 0 auto;
 }
 
 .wp-block-gallery .blocks-gallery-image figcaption {
