--- a/seedlet/style-rtl.css
+++ b/seedlet/style-rtl.css
@@ -1490,7 +1490,7 @@ object {
 }
 
 .wp-block-gallery {
-	margin: 0;
+	margin: 0 auto;
 }
 
 .wp-block-gallery .blocks-gallery-image figcaption,
