--- a/seedlet/style.css
+++ b/seedlet/style.css
@@ -1498,7 +1498,7 @@ object {
 }
 
 .wp-block-gallery {
-	margin: 0;
+	margin: 0 auto;
 }
 
 .wp-block-gallery .blocks-gallery-image figcaption,
